# quickjspp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  repl.c
quickjs/: CMakeLists.txt  premake5.lua  qjscalc.c  quickjs-libc.c  quickjs.c
quickjs/include/: quickjs.h
quickjs/tests/: test_eval.cpp
quickjspp/: CMakeLists.txt
quickjspp/src/quickjspp/: quickjspp.cpp  quickjspp.h
quickjspp/src/quickjspp/detail/: bind.h  class_wrapper.cpp  class_wrapper.h  closure.cpp  closure.h  debugger_server.h  function_call.h  line_tunnel.h  net_context.h  net_def.h  tcp_server.h  traits.h  wrap_closure.h
quickjspp/src/quickjspp/detail/debugger/: debugger_server.h  line_tunnel.h  semaphore.h  tcp_tunnel.h
scripts/: Build.bat  Clean.bat  Clean.py  CompileJs.bat  CreateProject.bat
tests/: CMakeLists.txt  test_eval.cpp
tests/src/: main.cpp  net_context.h  test.js
tools/: dbg.py
